kubernetes/apps/flux-system/addons/app/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.parsec.sh"
    hajimari.io/enable: "false"
spec:
  ingressClassName: external
  rules:
    - host: &host "flux-webhook.parsec.sh"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
